--- a/shush.1
+++ b/shush.1
@@ -337,7 +337,7 @@ A lock will be set while running the command, and mail sent to "root" and "root\
 \fBcrontab\fR(1), \fBpcre\fR(3), \fBregex\fR(3), \fBsendmail\fR(1), \fBsh\fR(1)\.
 .
 .SH "AVAILABILITY"
-The latest official release of shush is available on github\. The old version is available on http://web\.taranis\.org/shush/\.
+The latest release of shush is available on github\. The old version is available on http://web\.taranis\.org/shush/\.
 .
 .SH "AUTHOR"
 Christophe Kalt \fIshush@taranis\.org\fR (Original author) Stephen Muth \fIsmuth4@gmail\.com\fR
